--- a/doc/soluzione.tex
+++ b/doc/soluzione.tex
@@ -1,6 +1,6 @@
 Tale descrizione deve contemplare almeno gli elementi riportati nelle seguenti sottosezioni.
 
-\subsection{Convolutional neural network} \todo{specificare input size (quando l'avremo scelta)}
+\subsection{Convolutional neural network} \label{sec:cnn_relu} \todo{specificare input size (quando l'avremo scelta)}
 \emph{Descrivere in questa sezione l’architettura della convolutional neural network
 sviluppata nell’ambito del progetto. Se si utilizza un’architettura nota, si riportino gli elementi fondamentali della rete e le eventuali modifiche effettuate ma, soprattutto, si motivi la scelta.
 Definire in ogni caso se la rete è stata progettata come regressore (output:
