Procedura di training

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -9,29 +9,54 @@
 }
 
 @unpublished{miviagender,
-  author	    = {Antonio Greco and
-  			   Alessia Saggese and
-  			   Mario Vento and
-  			   Vincenzo Vigilante},
+  author	  = {Antonio Greco and
+  			       Alessia Saggese and
+  			       Mario Vento and
+  			       Vincenzo Vigilante},
   title     = {Gender recognition in the wild: a robustness evaluation over corrupted images},
   year      = {2020},
   note      = {unpublished},
 }
 
 @unpublished{miviaage,
-  author	    = {Antonio Greco and
-  			   Alessia Saggese and
-  			   Mario Vento and
-  			   Vincenzo Vigilante},
+  author	  = {Antonio Greco and
+  			       Alessia Saggese and
+  			       Mario Vento and
+  			       Vincenzo Vigilante},
   title     = {Effective training of convolutional neural networks for age estimation based on knowledge distillation},
   year      = {2020},
   note      = {unpublished},
 }
 
 @InProceedings{mobilenetv3,
-author = {Howard, Andrew and Sandler, Mark and Chu, Grace and Chen, Liang-Chieh and Chen, Bo and Tan, Mingxing and Wang, Weijun and Zhu, Yukun and Pang, Ruoming and Vasudevan, Vijay and Le, Quoc V. and Adam, Hartwig},
-title = {Searching for MobileNetV3},
-booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
-month = {October},
-year = {2019}
+  author    = {Howard, Andrew and Sandler, Mark and Chu, Grace and Chen, Liang-Chieh and Chen, Bo and Tan, Mingxing and Wang, Weijun and Zhu, Yukun and Pang, Ruoming and Vasudevan, Vijay and Le, Quoc V. and Adam, Hartwig},
+  title     = {Searching for MobileNetV3},
+  booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+  month     = {October},
+  year      = {2019}
+}
+
+@article{adam,
+  title     = {Adam: A method for stochastic optimization},
+  author    = {Kingma, Diederik P and Ba, Jimmy},
+  journal   = {arXiv preprint arXiv:1412.6980},
+  year      = {2014}
+}
+
+@article{adam_no_wd,
+  title={Decoupled Weight Decay Regularization}, 
+  author={Ilya Loshchilov and Frank Hutter},
+  year={2019},
+  eprint={1711.05101},
+  archivePrefix={arXiv},
+  primaryClass={cs.LG}
+}
+
+@misc{adam_warmup,
+  title={On the adequacy of untuned warmup for adaptive optimization}, 
+  author={Jerry Ma and Denis Yarats},
+  year={2020},
+  eprint={1910.04209},
+  archivePrefix={arXiv},
+  primaryClass={cs.LG}
 }
