--- a/doc/main.tex
+++ b/doc/main.tex
@@ -32,6 +32,7 @@
 % TO DO
 \usepackage{todonotes}
 \usepackage{verbatim}
+\usepackage{pgfplots} % plot belli
 
 \graphicspath{{Images/}}
 \usepackage{wrapfig}
