--- a/doc/soluzione.tex
+++ b/doc/soluzione.tex
@@ -115,8 +115,6 @@ Nel caso in cui, invece, l'immagine dovesse essere sottocampionata, verrà utili
 
 In entrambi i casi, il ridimensionamento viene effettuato mantenendo le proporzioni originali dell'immagine, e nel caso in cui l'immagine ritagliata non fosse quadrata viene aggiunto del padding. 
 
-Dopo le operazioni di ridimensionamento, ad ogni immagine viene sottratta la media, per ogni canale, delle immagini del dataset VGGFace2.
-
 Dopo le operazioni di ridimensionamento, ad ogni immagine viene sottratta la media, per ogni canale, delle immagini del dataset VGGFace. Ciò permette alla distribuzione degli input di essere centrata in $0$, permettendoci di sfruttare tutti i vantaggi della non linearità della ReLu (sezione~\ref{sec:ccn_relu}) ed ottenere una convergenza più veloce \cite{miviaage}.
 
 \begin{figure}[ht]
@@ -224,3 +222,76 @@ Ovviamente non abbiamo potuto riutilizzare i pesi ImageNet per il \emph{top} del
 \subsubsection{Procedura di training}
 \todo{Indicare probabilità di corruzioni e probabilità di corruzioni frequenti. Indicare anche che non facciamo regolarizzazione (weight decay o regolarizzazione L1 o L2) perché c’è già la Batch Normalization nel modello e i risultati sono in linea con il paper di Age Estimation del MIVIA anche senza.}
 \emph{Dettagliare e motivare almeno le seguenti scelte: numero di epoche di addestramento, tipo di ottimizzatore, learning rate scheduling (tecnica di riduzione, learning rate iniziale, fattore di riduzione). Fornire dettagli su eventuali elementi aggiuntivi: batch normalization, weight decay, early stopping etc. Per ognuna delle scelte, riportare i valori esatti dei parametri utilizzati, per rendere l’esperimento riproducibile. Motivare la scelta di tali valori.}
+
+\begin{comment}
+	- Learning rate OK
+		- Scheduling: a quali epoche l'abbiamo ridotto e perché
+		- Warmup: come l'abbiamo fatto, perché (citare paper)
+		- Come l'abbiamo ridotto, quando, fattore di riduzione
+	- Ottimizzatore OK
+		- Perché Adam (magari citare paper)
+		- Parametri, perché dei valori
+	- Regolarizzazione OK
+		- No weight decay
+		- Batch normalizatin forse è inclusa in mobilenet
+	- Perché abbiamo levato di mezzo early stopping (forse) OK
+	- Numero di epoche OK
+		- Ci siamo basati sul MAE. Avremmo potuto ripartire da capo e cambiare learning rate prima, ma non abbiamo avuto tempo.
+\end{comment}
+
+È stato scelto Adam \cite{adam} perché in molti casi offre prestazioni paragonabili a SGD richiedendo meno operazioni di tuning dei parametri. In particolare gestisce i momenti in maniera adattiva e rende le implementazioni "classiche" del weight decay poco incisive. Tutto ciò ci ha permesso di ridurre il numero di tentativi (e quindi il tempo) necessari a trovare una buona configurazione dell'ottimizzatore. Difatti, l'algoritmo ci ha richiesto soltanto di intervenire in diminuzione sul learning rate quando le metriche monitorate non miglioravano significativamente. 
+Per quanto riguarda gli altri parametri, i valori di default riportati in \cite{adam} e forniti dall'implementazione Keras di Adam sono risultati ottimali.
+
+Infine, Adam offre il vantaggio non indifferente dell'avere learning rate adattivi per ogni peso della rete.
+
+Per ciò che concerne le tecniche di regolarizzazione, MobileNetV3 include all'uopo livelli di batch normalization e dropout. Non abbiamo messo in atto strategie di weight decay perché gli approcci "classici" a questa tecnica (in pratica quelli basati su regolarizzazione $L_2$) sono poco efficaci con Adam \cite{adam_no_wd} e visti i risultati sul validation set non ci è sembrato necessario approfondire ulteriormente l'argomento. 
+
+PROCEDURA DI TRAINING IN GENERALE (learning rate, numero di epoche etc.)
+Infine, per quanto riguarda il learning rate, abbiamo eseguito 2000\cite{adam_warmup} step di warmup, partendo con un learning rate pari 0 ed incrementandolo fino a raggiungere il valore di default previsto per Adam, cioè $0.001$. Successivamente, abbiamo ridotto il learning rate di un fattore 20 in tre momenti diversi:
+\begin{itemize}
+	\item dopo l'epoca 6, in quanto la fase oscillatoria sul validation set della loss e del MAE era terminata ed abbiamo avuto valori paragonabili di queste metriche per due epoche consecutive; possiamo notare come successivamente a questa diminuzione vi sia una sostanziale riduzione dei valori assunti da entrambe le funzioni;
+	\item dopo l'epoca 12, perché il MSE e il MAE avevano ripreso ad oscillare, seppur in un intervallo particolarmente ridotto;
+	\item dopo l'epoca 16, perché le metriche si erano praticamente stabilizzate sui nuovi valori, e volevamo verificare se vi fosse ancora margine di miglioramento.
+\end{itemize}
+Avevamo anche predisposto delle callback per la riduzione automatica del learning rate e per l'early stopping, tuttavia abbiamo scelto di non utilizzarle perché l'osservazione diretta delle curve ci ha permesso maggiore controllo. Questi strumenti potrebbero essere impiegati dopo questo primo esperimento per un eventuale addestramento sull'intero training set.
+
+La rete è stata allenata per un totale di $19$ epoche, tuttavia scegliamo come modello definitivo quello all'epoca XX, in quanto le epoche successive non hanno apportato miglioramenti significativi alle metriche osservate. \todo{mettere numero vero di epoca alla quale ci fermiamo}
+
+\begin{figure}[ht]
+	\centering
+	\begin{tikzpicture}
+		\begin{axis}[
+			title={MSE},
+			xlabel={Epoche},
+			ylabel={Loss},
+			xmin=0, xmax=19,
+			ymin=0, ymax=90,
+			xtick={0,2,4,6,8,10,12,14,16,18},
+			%ytick={0,20,40,60,80,100,120},
+			legend pos=north east,
+			ymajorgrids=true,
+			grid style=dashed,
+		]
+		
+		\addplot[
+			color=orange,
+			mark=circle,
+			]
+			coordinates {
+			(0,16.89)(1,11.63)(2,10.04)(3,9.04)(4,8.35)(5,7.80)(6,7.39)(7, 5.64)(8,5.21)(9,5.03)(10,4.91)(11,4.82)(12,4.74)(13,4.62)(14,4.59)(15,4.58)(16,4.57)(17,4.56)(18,4.57)
+			};
+			\legend{Training set}
+		
+		%\addplot[
+		%	color=blue,
+		%	mark=square,
+		%	]
+		%	coordinates {
+		%	(0,85.03)(1,17.94)(2,28.91)(3,18.54)(4,26.96)(5,)(6,16.07)(7,7.86)(8,7.48)(9,7.07)(10,7.24)(11,7.14)(12,7.19)(13,6.68)(14,6.69)(15,6.68)(16,6.68)(17,6.68)(18,6.68)
+		%	};
+		%	\legend{Validation set}
+		
+		\end{axis}
+	\end{tikzpicture}
+	\caption{SCRIVI QUA}
+\end{figure}
