--- a/doc/soluzione.tex
+++ b/doc/soluzione.tex
@@ -264,7 +264,7 @@ La rete è stata allenata per un totale di $19$ epoche, tuttavia scegliamo come 
 			title={MSE},
 			xlabel={Epoche},
 			ylabel={Loss},
-			xmin=0, xmax=19,
+			xmin=-1, xmax=19,
 			ymin=0, ymax=90,
 			xtick={0,2,4,6,8,10,12,14,16,18},
 			%ytick={0,20,40,60,80,100,120},
@@ -280,17 +280,17 @@ La rete è stata allenata per un totale di $19$ epoche, tuttavia scegliamo come 
 			coordinates {
 			(0,16.89)(1,11.63)(2,10.04)(3,9.04)(4,8.35)(5,7.80)(6,7.39)(7, 5.64)(8,5.21)(9,5.03)(10,4.91)(11,4.82)(12,4.74)(13,4.62)(14,4.59)(15,4.58)(16,4.57)(17,4.56)(18,4.57)
 			};
-			\legend{Training set}
 		
-		%\addplot[
-		%	color=blue,
-		%	mark=square,
-		%	]
-		%	coordinates {
-		%	(0,85.03)(1,17.94)(2,28.91)(3,18.54)(4,26.96)(5,)(6,16.07)(7,7.86)(8,7.48)(9,7.07)(10,7.24)(11,7.14)(12,7.19)(13,6.68)(14,6.69)(15,6.68)(16,6.68)(17,6.68)(18,6.68)
-		%	};
-		%	\legend{Validation set}
+		\addplot[
+			color=blue,
+			mark=square,
+			]
+			coordinates {
+			(0,85.03)(1,17.94)(2,28.91)(3,18.54)(4,26.96)(5,17.18)(6,16.07)(7,7.86)(8,7.48)(9,7.07)(10,7.24)(11,7.14)(12,7.19)(13,6.68)(14,6.69)(15,6.68)(16,6.68)(17,6.68)(18,6.68)
+			};
 		
+		\legend{Training set, Validation set}
+
 		\end{axis}
 	\end{tikzpicture}
 	\caption{SCRIVI QUA}
