--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -60,3 +60,28 @@
   archivePrefix={arXiv},
   primaryClass={cs.LG}
 }
+
+@article{imagenet,
+  author    = {Olga Russakovsky and
+               Jia Deng and
+               Hao Su and
+               Jonathan Krause and
+               Sanjeev Satheesh and
+               Sean Ma and
+               Zhiheng Huang and
+               Andrej Karpathy and
+               Aditya Khosla and
+               Michael S. Bernstein and
+               Alexander C. Berg and
+               Fei{-}Fei Li},
+  title     = {ImageNet Large Scale Visual Recognition Challenge},
+  journal   = {CoRR},
+  volume    = {abs/1409.0575},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1409.0575},
+  archivePrefix = {arXiv},
+  eprint    = {1409.0575},
+  timestamp = {Mon, 22 Jul 2019 14:55:31 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/RussakovskyDSKSMHKKBBF14.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
