risolto problema build

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -73,7 +73,7 @@
                Aditya Khosla and
                Michael S. Bernstein and
                Alexander C. Berg and
-               Fei{-}Fei Li},
+               Fei-Fei Li},
   title     = {ImageNet Large Scale Visual Recognition Challenge},
   journal   = {CoRR},
   volume    = {abs/1409.0575},
